# 3DsymChallengeICCV17

./: CMakeLists.txt  README.txt  table-plane.txt  table.ply  train.txt
src/: createscene.cpp  estimate_global_sym.cpp  estimate_local_sym.cpp
